middle part added

--- a/Index.html
+++ b/Index.html
@@ -24,6 +24,21 @@
         </div>
         <div class="half-width"><img src="my image/my-bg edit.png" alt=""></div>
     </section>
+    <section class="dream">
+        <div class="half-width">
+            <img src="images/my-bg2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web developwer</h2>
+            <p>Becoming a web developer is a rewarding career that offers great scope for opportunity and
+                progression.This career is all about skill, and there isn’t any need to gain a degree or associated
+                qualification. We’re not saying that you shouldn’t study this area of work, but most web developers are
+                self-taught.</p>
+            <a class="link-button" target="_blank" href="">Download Resume</a>
+        </div>
+
+    </section>
 </body>
 
 </html>
