--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section class="top">
+    <section class="top flexible">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Jobaer Khan Rabby's</span> World!</h1>
@@ -24,7 +24,7 @@
         </div>
         <div class="half-width"><img src="my image/my-bg edit.png" alt=""></div>
     </section>
-    <section class="dream">
+    <section class="dream flexible">
         <div class="half-width">
             <img src="images/my-bg2.png" alt="">
         </div>
@@ -38,6 +38,26 @@
             <a class="link-button" target="_blank" href="">Download Resume</a>
         </div>
 
+    </section>
+    <section class="experience">
+        <h1>Experiences</h1>
+        <div class="flexible">
+            <div class="half-width">
+                <h1>Full Stack Developer</h1>
+                <h2>2021-Present|Pro level Developer</h2>
+                <p>Full stack developers are computer programmers who are proficient in both front and back end
+                    coding.Their
+                    primary responsibilities include designing user interactions on websites, developing servers, and
+                    databases for website functionality, and coding for mobile platforms.</p>
+            </div>
+            <div class="half-width">
+                <h1>Junior Web Developer</h1>
+                <h2>2020-2021|Junior Promgramming Learner</h2>
+                <p>Monitor the success of development plans and help employees make the most of learning opportunities.
+                    Collaborate with managers to develop their team members through career pathing. Oversee budgets and
+                    negotiate contracts. Organize hiring and training activities.</p>
+            </div>
+        </div>
     </section>
 </body>
 
