--- a/Index.html
+++ b/Index.html
@@ -39,26 +39,29 @@
         </div>
 
     </section>
-    <section class="experience">
-        <h1>Experiences</h1>
+    <h1>Experiences</h1>
+    <section class="experience-area">
         <div class="flexible">
-            <div class="half-width">
-                <h1>Full Stack Developer</h1>
-                <h2>2021-Present|Pro level Developer</h2>
+            <div id="web-developer" class="experience">
+                <h2>Full Stack Developer</h2>
+                <h3 class="orange-color">2021-Present|Pro level Developer</h3>
                 <p>Full stack developers are computer programmers who are proficient in both front and back end
                     coding.Their
                     primary responsibilities include designing user interactions on websites, developing servers, and
                     databases for website functionality, and coding for mobile platforms.</p>
             </div>
-            <div class="half-width">
-                <h1>Junior Web Developer</h1>
-                <h2>2020-2021|Junior Promgramming Learner</h2>
+            <div id="junior-developer" class="experience">
+                <h2>Junior Web Developer</h2>
+                <h3 class="orange-color">2020-2021|Junior Promgramming Learner</h3>
                 <p>Monitor the success of development plans and help employees make the most of learning opportunities.
                     Collaborate with managers to develop their team members through career pathing. Oversee budgets and
                     negotiate contracts. Organize hiring and training activities.</p>
             </div>
         </div>
     </section>
+    <footer>
+        <p>Copyright © Jobaer Khan Rabby 2021, Inc.</p>
+    </footer>
 </body>
 
 </html>
